# backend/handlers/markets/handler.go
@@ -386,12 +386,13 @@ func (h *Handler) GetDetails(w http.ResponseWriter, r *http.Request) {
 	}
 
 	response := dto.MarketDetailsResponse{
-		Market:             publicMarketResponseFromDomain(details.Market),
-		Creator:            creatorResponseFromSummary(details.Creator),
-		ProbabilityChanges: probabilityChangesToResponse(details.ProbabilityChanges),
-		NumUsers:           details.NumUsers,
-		TotalVolume:        details.TotalVolume,
-		MarketDust:         details.MarketDust,
+		Market:                publicMarketResponseFromDomain(details.Market),
+		Creator:               creatorResponseFromSummary(details.Creator),
+		ProbabilityChanges:    probabilityChangesToResponse(details.ProbabilityChanges),
+		NumUsers:              details.NumUsers,
+		TotalVolume:           details.TotalVolume,
+		MarketDust:            details.MarketDust,
+		DescriptionAmendments: descriptionAmendmentsToResponse(details.DescriptionAmendments),
 	}
 
 	_ = writeJSON(w, http.StatusOK, response)
